--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "main": "index.js",
   "directories": {},
   "scripts": {
-    "test": "node --max-old-space-size=16000 --no-warnings --experimental-modules ./node_modules/.bin/section ./test/*.js --dev.testing --log-level=debug+ --log-module=*",
+    "test": "node --scripts-prepend-node-path --max-old-space-size=16000 --no-warnings --experimental-modules ./node_modules/.bin/section ./test/*.js --dev.testing --log-level=debug+ --log-module=*",
     "import-vet": "node --max-old-space-size=16000 --no-warnings --experimental-modules ./runImport.js --vet --dev --log-level=debug+ --log-module=*",
     "import-human": "node --max-old-space-size=16000 --no-warnings --experimental-modules ./runImport.js --dev --log-level=debug+ --log-module=*"
   },
   "author": "Lina van der Weg",
   "license": "MIT",
   "dependencies": {
-    "@distributed-systems/http2-client": "^2.1.1",
+    "@distributed-systems/http2-client": "^2.1.3",
     "@distributed-systems/sftp-client": "^1.1.0",
-    "@google-cloud/storage": "^4.3.0",
-    "@infect/api": "^3.0.3",
-    "@infect/infect-rda-sample-importer": "^3.1.0",
+    "@google-cloud/storage": "^4.7.0",
+    "@infect/api": "^3.1.2",
+    "@infect/infect-rda-sample-importer": "^3.1.1",
     "@infect/infect-rda-sample-importer-client": "^1.0.2",
     "@infect/infect-rda-sample-storage": "^4.1.1",
     "@infect/rda-lock-client": "^3.1.0",
     "@infect/rda-lock-service": "^2.1.4",
     "@infect/rda-service": "^4.1.1",
-    "@infect/rda-service-manager": "^2.0.4",
+    "@infect/rda-service-manager": "^2.1.0",
     "@infect/rda-service-registry": "^3.0.3",
     "@rainbow-industries/rainbow-config": "^1.0.2",
-    "csv-parse": "^4.8.5",
+    "csv-parse": "^4.9.0",
     "logd": "^2.3.1",
     "logd-console-transport": "^1.1.0"
   },
