--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@distributed-systems/http2-client": "^2.1.3",
     "@distributed-systems/sftp-client": "^1.1.0",
     "@google-cloud/storage": "^4.7.0",
-    "@infect/api": "^3.1.2",
+    "@infect/api": "^3.1.4",
     "@infect/infect-rda-sample-importer": "^3.1.1",
-    "@infect/infect-rda-sample-importer-client": "^1.0.2",
+    "@infect/infect-rda-sample-importer-client": "^2.0.0",
     "@infect/infect-rda-sample-storage": "^4.1.1",
     "@infect/rda-lock-client": "^3.1.0",
     "@infect/rda-lock-service": "^2.1.4",
@@ -25,6 +25,7 @@
     "@infect/rda-service-manager": "^2.1.0",
     "@infect/rda-service-registry": "^3.0.3",
     "@rainbow-industries/rainbow-config": "^1.0.2",
+    "@sendgrid/mail": "^7.1.0",
     "csv-parse": "^4.9.0",
     "logd": "^2.3.1",
     "logd-console-transport": "^1.1.0"
